--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add">Add</string>
+    <string name="new_estimate">New Estimate</string>
+    <string name="new_item">New Item</string>
+    <string name="new_folder">New Folder</string>
 </resources>
