--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">Estimates Calculator</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add">Add</string>
     <string name="new_estimate">New Estimate</string>
     <string name="new_item">New Item</string>
     <string name="new_folder">New Folder</string>
     <string name="item_name">Item Name</string>
     <string name="item_price">Item Price</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="folder_name">Folder Name</string>
 </resources>
