make estimate feature "there is a bug in this version"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="delete">Delete</string>
     <string name="select_all">Select All</string>
     <string name="deselect_all">Deselect All</string>
+    <string name="items">Items</string>
+    <string name="total">Total</string>
+    <string name="qty">Qty</string>
+    <string name="add_items">Add Items</string>
 </resources>
