--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="add_items">Add Items</string>
     <string name="send">Send</string>
     <string name="open_pdf">Open Pdf</string>
+    <string name="save_invoice">Save Invoice</string>
+    <string name="open_externally">Open Externally</string>
 </resources>
