--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="open_pdf">Open Pdf</string>
     <string name="save_invoice">Save Invoice</string>
     <string name="open_externally">Open Externally</string>
+    <string name="my_estimates">My Estimates</string>
 </resources>
