--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
     <string name="phone_number_2">Phone Number 2</string>
     <string name="e_mail">E-mail</string>
     <string name="address">Address</string>
+    <string name="view">VIEW</string>
+    <string name="client">Client :</string>
     <string-array name="InvoiceTypes">
         <item>Estimate</item>
         <item>Invoice</item>
