--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">Estimates Calculator</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add">Add</string>
     <string name="new_estimate">New Estimate</string>
     <string name="new_item">New Item</string>
@@ -24,7 +22,6 @@
     <string name="my_estimates">My Estimates</string>
     <string name="my_clients">My Clients</string>
     <string name="client_name">Client Name</string>
-    <string name="company_name">Company Name</string>
     <string name="organization">Organization</string>
     <string name="title">Title</string>
     <string name="phone_number_1">Phone Number 1</string>
@@ -34,9 +31,9 @@
     <string name="view">VIEW</string>
     <string name="client">Client :</string>
     <string name="save">Save</string>
-    <string-array name="InvoiceTypes">
-        <item>Estimate</item>
-        <item>Invoice</item>
-        <!--item>Incoming</item-->
-    </string-array>
+    <string name="delete_items">"Delete Items"</string>
+    <string name="delete_client">Delete Client</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete_client_dialog">Are you sure you want to delete this Client\n you can\'t undo this</string>
+    <string name="delete_items_dialog">Are you sure you want to delete %s item\n you can\'t undo this</string>
 </resources>
