--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -20,8 +20,8 @@
     <string name="open_pdf">فتح Pdf</string>
     <string name="save_invoice">حفظ الفاتورة</string>
     <string name="open_externally">فتح خارج التطبيق</string>
-    <string name="my_estimates">التسعيرات</string>
-    <string name="my_clients">العملاء</string>
+    <string name="estimates">التسعيرات</string>
+    <string name="clients">العملاء</string>
     <string name="client_name">إسم العميل</string>
     <string name="organization">الشركة</string>
     <string name="title">الوظيفة</string>
@@ -37,4 +37,6 @@
     <string name="cancel">إلغاء</string>
     <string name="delete_client_dialog">هل انت متأكد انك تريد حذف هذا العميل\nتنبية : لا يمكنك التراجع فى هذه العملية</string>
     <string name="delete_items_dialog">هل انت متأكد انك تريد حذف %s صنف\nتنبية : لا يمكنك التراجع فى هذه العملية</string>
+    <string name="open">فتح</string>
+    <string name="close">غلق</string>
 </resources>
