--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,7 @@
     <string name="close">Close</string>
     <string name="delete_client_dialog">Are you sure you want to delete this Client\n you can\'t undo this</string>
     <string name="delete_items_dialog">Are you sure you want to delete %s item\n you can\'t undo this</string>
+    <string name="empty_folder">Empty folder\nadd items from the options menu</string>
+    <string name="empty_clients">Your Clients will Show Here</string>
+    <string name="empty_invoices">Your Invoices/Estimates will Show Here</string>
 </resources>
