--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,11 @@
     <string name="empty_folder">Empty folder\nadd items from the options menu</string>
     <string name="empty_clients">Your Clients will Show Here</string>
     <string name="empty_invoices">Your Invoices/Estimates will Show Here</string>
+    <string name="date_format">Date Format</string>
+    <string name="currency">Currency</string>
+    <string name="company_info">Company Info</string>
+    <string name="settings">Settings</string>
+    <string name="company_name">Company Name</string>
+    <string name="person_name">Person Name</string>
+    <string name="phone_number">Phone Number</string>
 </resources>
