--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">InvoiceHub</string>
     <string name="add">Add</string>
+    <string name="ok">OK</string>
     <string name="new_estimate">New Estimate</string>
     <string name="new_item">New Item</string>
     <string name="new_folder">New Folder</string>
@@ -57,4 +58,10 @@
     <string name="choose_client">Choose Client</string>
     <string name="pdf_preview">Pdf Preview</string>
     <string name="client_view">Client View</string>
+    <string name="choose_format">Choose Date Format</string>
+    <string name="choose_currency">Choose Currency</string>
+    <string name="reports">Reports</string>
+    <string name="subscribe">Subscribe</string>
+    <string name="coming_soon">Coming Soon</string>
+
 </resources>
