now you can filter (invoices, estimates, drafts or show all) in InvoicesViewFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="per_year">/ Year</string>
     <string name="yearly_features">Save more than 25%</string>
     <string name="search">Search</string>
+    <string name="filter">Filter</string>
 
 </resources>
