reporting version 1 can get number of invoices, estimates & draft. And can get the total money (sum of invoices Total)

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -73,4 +73,6 @@
     <string name="yearly_subscription">الإشتراك السنوى</string>
     <string name="per_year">/ سنة</string>
     <string name="yearly_features">"وفر 25% "</string>
+    <string name="search">بحث</string>
+    <string name="filter">فلتر</string>
 </resources>
