--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,8 @@
     <string name="warning">Warning</string>
     <string name="importing_dialog">Existing data will be overwritten are you sure you want to proceed</string>
     <string name="proceed">Proceed</string>
+
+    <string name="ad_mob_banner_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="ad_mob_interstitial_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
+    <string name="ad_mob_production" translatable="false">ca-app-pub-2521710064847894~5886437294</string>
 </resources>
