can copy (one item a time) & apply discount (to single or multiple items) the functionality of discount is controlled by variable SPECIAL in Constants.kt
(still testing)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,6 +93,7 @@
     <string name="open_report_as_excel">Open Report as Excel</string>
     <string name="estimate">Estimate</string>
     <string name="invoices">Invoices</string>
+    <string name="copy">Copy</string>
 
 
 </resources>
