hiding the bottom navigation on navigating to some views and added the network feature just the begining

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -89,4 +89,5 @@
     <string name="your_role">Your Role</string>
     <string name="none">None</string>
     <string name="server">Server</string>
+    <string name="network_settings">Network Settings</string>
 </resources>
